--- a/src/bar-comp/scatter.component.css
+++ b/src/bar-comp/scatter.component.css
@@ -1,8 +1,30 @@
 .grid .tick {
   stroke: lightgrey;
   stroke-opacity: 0.7;
-  shape-rendering: crispEdges;
+  shape-rendering:crispEdges;
+  grid-gap: 10px;
 }
 .grid path {
-        stroke-width: 0;
+        stroke-width: 10;
+
 }
+
+.axisRed line{
+  stroke: rgba(128, 128, 128, 0.781);
+}
+
+.axisRed path{
+  stroke: rgba(128, 128, 128, 0.781);
+}
+
+.axisRed text{
+  fill: rgba(250, 250, 250, 0.781);
+}
+
+/* .grid
+{
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(60px,1fr));
+  grid-auto-rows: 60px;
+} */
